# special-functions

./: CLAUDE.md  CMakeLists.txt  README.md  fix_rapidcheck_include_issue.py
.github/workflows/: test.yml
include/: special_functions.h
include/complex_math/: complex_norms.h  complex_safe_math.h  complex_safe_math.tcc
include/complex_util/: complex_util.h
include/numeric_limits/: numeric_limits.h
include/polynomial/: horner.h  notsospecfun.h  polynomial.h  polynomial.tcc  rational_polynomial.h  solution.h  solver_bairstow.h  solver_bairstow.tcc  solver_jenkins_traub.h  solver_jenkins_traub.tcc  solver_jenkins_traub_complex.tcc  solver_laguerre.h  solver_laguerre.tcc  solver_low_degree.h  solver_low_degree.tcc  solver_quadratic.h  solver_quadratic.tcc  static_polynomial.h  static_polynomial.tcc
include/special_functions/: airy_ai.h  airy_bi.h  associated_laguerre_polynomial_l.h  associated_legendre_p.h  associated_legendre_q.h  barnes_g.h  bell_polynomial_b.h  bernoulli_number.h  bernoulli_polynomial_b.h  bessel_j.h  bessel_y.h  beta.h  binomial_coefficient.h  bose_einstein_integral_g.h  bulirsch_elliptic_integral_cel.h  bulirsch_elliptic_integral_el1.h  bulirsch_elliptic_integral_el2.h  bulirsch_elliptic_integral_el3.h  carlson_elliptic_r_c.h  carlson_elliptic_r_d.h  carlson_elliptic_r_f.h  carlson_elliptic_r_g.h  carlson_elliptic_r_j.h  chebyshev_polynomial_t.h  chebyshev_polynomial_u.h  chebyshev_polynomial_v.h  chebyshev_polynomial_w.h  clausen_cl.h  clausen_sl.h  complete_carlson_elliptic_r_f.h  complete_carlson_elliptic_r_g.h  complete_elliptic_integral_e.h  complete_elliptic_integral_k.h  complete_elliptic_integral_pi.h  complete_legendre_elliptic_integral_d.h  confluent_hypergeometric_0_f_1.h  cos_pi.h  cosh_pi.h  cosine_integral_ci.h  dawson_d.h  (+118 more)
include/special_functions/detail/: airy_ai.h  airy_bi.h  airy_t.h  associated_laguerre_polynomial_l.h  associated_legendre_p.h  associated_legendre_q.h  barnes_g.h  bell_polynomial_b.h  bernoulli_number.h  bernoulli_number_by_series_summation.h  bernoulli_polynomial_b.h  bessel_by_asymptotic_expansion.h  bessel_by_series_expansion.h  bessel_j.h  bessel_t.h  bessel_y.h  beta.h  binomial_coefficient.h  bose_einstein_integral_g.h  bulirsch_elliptic_integral_cel.h  bulirsch_elliptic_integral_el1.h  bulirsch_elliptic_integral_el2.h  bulirsch_elliptic_integral_el3.h  carlson_elliptic_r_c.h  carlson_elliptic_r_d.h  carlson_elliptic_r_f.h  carlson_elliptic_r_g.h  clausen_cl.h  (+178 more)
include/summation/: summation.h  summation.tcc  summation.tcc.fma
test/: airy_ai_test.cpp  airy_bi_test.cpp  associated_laguerre_polynomial_l_test.cpp  associated_legendre_p_test.cpp  associated_legendre_q_test.cpp  barnes_g_test.cpp  bell_polynomial_b_test.cpp  bernoulli_number_test.cpp  bernoulli_polynomial_b_test.cpp  bessel_j_test.cpp  bessel_y_test.cpp  beta_test.cpp  binomial_coefficient_test.cpp  bose_einstein_integral_g_test.cpp  bulirsch_elliptic_integral_cel_test.cpp  bulirsch_elliptic_integral_el1_test.cpp  bulirsch_elliptic_integral_el2_test.cpp  bulirsch_elliptic_integral_el3_test.cpp  carlson_elliptic_r_c_test.cpp  carlson_elliptic_r_d_test.cpp  carlson_elliptic_r_f_test.cpp  carlson_elliptic_r_g_test.cpp  carlson_elliptic_r_j_test.cpp  chebyshev_polynomial_t_test.cpp  chebyshev_polynomial_u_test.cpp  chebyshev_polynomial_v_test.cpp  chebyshev_polynomial_w_test.cpp  clausen_cl_test.cpp  clausen_sl_test.cpp  complete_carlson_elliptic_r_f_test.cpp  complete_carlson_elliptic_r_g_test.cpp  complete_elliptic_integral_e_test.cpp  complete_elliptic_integral_k_test.cpp  complete_elliptic_integral_pi_test.cpp  complete_legendre_elliptic_integral_d_test.cpp  confluent_hypergeometric_0_f_1_test.cpp  cos_pi_test.cpp  cosh_pi_test.cpp  cosine_integral_ci_test.cpp  dawson_d_test.cpp  (+115 more)
test/special_functions/: log_double_factorial_test.cpp
